; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-socket.c_count_size.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-socket.c_count_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_TNIL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32)* @count_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @count_size(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  store i64 0, i64* %5, align 8
  store i32 1, i32* %6, align 4
  br label %8

8:                                                ; preds = %23, %2
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i64 @lua_geti(i32* %9, i32 %10, i32 %11)
  %13 = load i64, i64* @LUA_TNIL, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %26

15:                                               ; preds = %8
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @luaL_checklstring(i32* %16, i32 -1, i64* %7)
  %18 = load i64, i64* %7, align 8
  %19 = load i64, i64* %5, align 8
  %20 = add i64 %19, %18
  store i64 %20, i64* %5, align 8
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @lua_pop(i32* %21, i32 1)
  br label %23

23:                                               ; preds = %15
  %24 = load i32, i32* %6, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %6, align 4
  br label %8

26:                                               ; preds = %8
  %27 = load i32*, i32** %3, align 8
  %28 = call i32 @lua_pop(i32* %27, i32 1)
  %29 = load i64, i64* %5, align 8
  ret i64 %29
}

declare dso_local i64 @lua_geti(i32*, i32, i32) #1

declare dso_local i32 @luaL_checklstring(i32*, i32, i64*) #1

declare dso_local i32 @lua_pop(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
